rest api for accessing employee info

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "rest api for user CRUD operations",
   "main": "app.js",
   "scripts": {
-    "start" : "nodemon app.js"
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,5 +23,10 @@
   "bugs": {
     "url": "https://github.com/prasanna1406/node_rest_api_demo/issues"
   },
-  "homepage": "https://github.com/prasanna1406/node_rest_api_demo#readme"
+  "homepage": "https://github.com/prasanna1406/node_rest_api_demo#readme",
+  "dependencies": {
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "mongoose": "^4.9.6"
+  }
 }
